LinkDialog: fix size of background image
At the default line-height the background image tends to
get clipped. Set it to the same line-height as the adjacent label
and both the label and the icon are aligned and the icon won't be
cutoff

Bug: T193480

--- a/modules/jquery.wikiEditor.dialogs.config.less
+++ b/modules/jquery.wikiEditor.dialogs.config.less
@@ -77,6 +77,7 @@
 /* Insert Link Dialog */
 #wikieditor-toolbar-link-int-target-status {
 	float: right;
+	line-height: 1.7em;
 }
 
 #wikieditor-toolbar-link-int-target,
